manifests/deployment-3.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "myakscluster-6de1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "myakscluster-6de1"
  template:
    metadata:
      labels:
        app: "myakscluster-6de1"
    spec:
      containers:
        - name: "myakscluster-6de1"
          image: "authorizationrepo.azurecr.io/myakscluster"
          ports:
          - containerPort: 80
