manifests/deployment-4.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "test-f76f"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "test-f76f"
  template:
    metadata:
      labels:
        app: "test-f76f"
    spec:
      containers:
        - name: "test-f76f"
          image: "authreporeg.azurecr.io/test"
          ports:
          - containerPort: 80
