manifests/service-4.yml
apiVersion: v1
kind: Service
metadata:
    name: "test-f76f"
    labels:
        app: "test-f76f"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "test-f76f"
