manifests/ingress-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "test-6428"
    labels:
        app: "test-6428"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: authorization-test-6428.6030b51ae8e8402e9482.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "test-6428"
                servicePort: 80
