manifests/ingress-3.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "test-f76f"
    labels:
        app: "test-f76f"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-test-f76f.6030b51ae8e8402e9482.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "test-f76f"
                servicePort: 80
